changed whiteList parsing